update by auto shell

--- a/文件和文件系统.md
+++ b/文件和文件系统.md
@@ -156,5 +156,117 @@ chmod命令就是修改这些参数的。
 
 >FreeBSD和Mac Os 是用（2），Linux 可以使用mount命令修改，默认情况下是先尝试(2)，如果目录组ID没设置，就用(1)
 
-## access和faccessat
+## access和faccessat 按照实际用户ID和实际ID组进行访问权限测试
+
+```c
+#include <unsitd.h>
+int access(const char *pathname , int mode );
+int facessat(int fd, const char *pathname , int mode, int flag);
+//成功返回0，失败返回-1
+```
+
+mode选项：
+
+- R_OK 测试读取权限
+
+- W_OK 测试写权限
+
+- X_OK 测试执行权限
+
+- F_OK 测试是否存在
+
+  使用时按位或
+
+flag参数如果设置为AT_EACCESS, 访问检查用的是进程的有效用户ID
+和有效用户组ID, 而不是实际用户ID和实际用户组ID
+
+## umask为进程设置文件模式创建屏蔽字
+
+```c
+#include <sys/stat.h>
+mode_t umask(mode_t cmask);
+```
+
+cmask是文件9个权限中的若干个按位`或`构成的。
+
+**在文件模式创建屏蔽字中为1的为，在文件mode中相应的位就一定会被关闭（屏蔽）**
+
+使用方法
+
+```c
+#define RWRWRW (S_IRUSR | S_IWUSR | S_IRGRP | S_IWGRP | S_IROTH | S_IWOTH)
+
+umask(0);//不屏蔽
+if (create("foo",RWRWRW)<0)//创建的文件权限是-rw-rw-rw-
+    printf("create failed"); 
+umask(S_IRGRP | S_IWGRP | S_IROTH | S_IWOTH);
+if (create("bar",RWRWRW)<0) //创建的文件权限-rw-------
+    printf("create failed"); 
+eixt(0);
+    
+```
+
+![1567238234062](/home/spade/Documents/markdown/linux_programing_pics/1566893155487.png)
+
+shell初始化时会这只一次umask，然后不在改变，一般为0022，屏蔽了其他写和其他执行。为了确保权限正确，需要考虑umask的值，避免需要的权限被屏蔽掉的情况。
+
+### umask命令
+
+在终端可使用umask查看当前环境的屏蔽字
+
+```bash
+spade@spade-PC:~$ umask -S #查看权限
+u=rwx,g=rx,o=rx
+spade@spade-PC:~$ umask #查看屏蔽的权限
+0022 #2是其他写，20是组写
+spade@spade-PC:~$ umask 0 #设为不屏蔽
+spade@spade-PC:~$ umask
+0000
+x
+```
+
+## chmod/fchmod/fchmodat 修改文件权限
+
+### 原型
+
+```c
+#include <sys/stat.h>
+int chmod(const char *pathname, mode_t mode);
+int fchmod(int fd, mode_t mode);
+int fchmodat(int fd, const char *pathname, mode_t mode, int flag);
+//成功返回0，失败返回-1
+```
+
+fchmodat 与 chmod在以下两种情况是相同的
+
+- pathname是绝对路径
+
+- fd参数取值为AT_FDCWD而参数pathname是相对路径
+
+  flag设置AT_SYMLINK_NOFOLLOW，fchmodat不会跟随符号链接
+
+![1567239649516](/home/spade/Documents/markdown/linux_programing_pics/1567239649516.png)
+
+mode取值按位或
+
+chmod在下列条件会清除两个权限位：
+
+- 对于Solaris等系统，没有超级用户权限设置`粘着位`，那么mode中的`粘着位`就会自动关闭。防止恶意用户设置粘着位
+
+  > Linux3.2和mac oS X 对这个没限制，因为对普通文件没意义
+
+创建新文件组ID可能不是调用进程所属的组（详见新文件和目录的所有权）。新文件的组ID可能是父目录的组ID，如果这种情况，又没有超级用户权限，那么设置组ID位会被自动屏蔽，防止用户创建一个设置组ID，而该文件是非该用户组所属的组拥有的。
+
+
+
+## chown、fchown、fchownat、lchown 修改文件用户ID和组ID
+
+```c
+#include <unistd.h>
+int chown(const char *pathname, uid_t owner, gid_t group);
+int fchown(int fd, uid_t owner, gid_t group);
+int fchownat(int fd, const char * pathname, uid_t owner, gid_t group, int flag); //fd 取值AT_FDCWD时，pathname可以使用相对路径
+int lchown(const char *pathname, uid_t owner, gid_t group);//只用来修改link文件的属性
+//成功返回0 失败-1
+```
 
