--- a/文件和文件系统.md
+++ b/文件和文件系统.md
@@ -270,3 +270,198 @@ int lchown(const char *pathname, uid_t owner, gid_t group);//只用来修改link
 //成功返回0 失败-1
 ```
 
+## 文件长度
+
+stat结构体中st_size。
+
+**单位**:字节
+
+由于单位的关系，只针对普通文件、目录文件和连接符号有意义。
+
+注意：
+
+- 普通文件的床都可以是0
+- 目录长度通常是一个数(16或者512的整数倍)
+- 符号链接长度是文件名中实际字节数
+
+
+
+st_blksize和st_blocks
+
+- st_blksize是对文件I/O合适的块的长度
+- st_blocks 是分配的512字节块数量
+
+
+
+## 文件截断truncate/ftruncate
+
+### 功能：
+
+在文件尾端去掉一些数据缩短文件，将现有文件截断为length，如果文件长度小于length，文件长度增加，创建了一个空洞。
+
+### 原型
+
+```c
+#include <unistd.h>
+int truncate(const char *pathname , off_t length);
+int ftruncate(int fd, off_t length);
+//成功返回0，失败返回-1
+```
+
+
+
+## 文件系统
+
+把磁盘分成若干个区，每个区都可以是不同的文件系统。
+
+i结点是固定长度的`记录项`，包含文件的大部分信息。
+
+![1567399266621](/home/spade/Documents/markdown/linux_programing_pics/1567399266621.png)
+
+
+
+- 每个i结点有一个链接计数，指向该节点的目录项数。当链接计数为0时可以删除释放文件块。这也是删除目录项函数是unlink不是delete，链接计数在st_nlink成员中，这种链接是硬链接。可以将重要文件设置多个硬链接，防止误删。
+- 另一种是软连接，符号链接，包含了该符号链接所指向的文件名字。并不直接指向i结点，而是数据区存放另一个文件的路径。
+- i结点包含了文件相关的所有信息。stat中大多数信息来自i结点。
+- 一个目录项不能指向另一个文件系统的i结点，这就是为什么ln的硬链接不能跨越文件系统。（软连接可以)
+
+![1567399295325](/home/spade/Documents/markdown/linux_programing_pics/1567399295325.png)
+
+## link/linkat 链接文件
+
+```c
+#include<unistd.h>
+int link(const char * existingpath, const char *newpath);
+int linkat(int efd, const char *existingpath, int nfd, const char *newpath, int flag);
+//成功0，错误-1
+```
+
+这两个函数功能都是创建一个新的目录项newpath，引用现有文件existingpath，如果newpath已经存在，就返回时错误。**只创建newpath的最后一项，其他的部分应该已经存在。**
+
+linkat 函数中`efd`是existing fd，nfd是new fd。其他的使用方式和之前的带有at结尾的函数类似。详见openat
+
+## ulink、unlinkat ,remove删除链接
+
+```c
+//unistd.h
+int unlink(const char *pathname);
+int unlinkat(int fd, const char *pathname, int flag);
+//stdio.h
+int remove(const char *pathname)
+//成功0，错误-1
+```
+
+解除对文件的链接，需要有该文件的写和执行权限。
+
+- flag参数使用AT_REMOVEDIR时，unlinkat可以类似rmdir一样删除目录。
+
+unlink经常用来保证即使程序在崩溃时，临时文件也随之销毁。用open或者creat创建一个文件，然后立刻使用unlink。文件处于打开状态，内容不会被立刻删除（目录项会被删除），等进程结束后，该文件内容才被删除。
+
+remove对于文件和unlink相同，对于目录，和rmdir相同。
+
+## rename/renameat重命名
+
+```c
+//stdio.h
+int rename(const char *oldname, const char *newname);
+int renameat(int oldfd, const char *oldname, int newfd, const char *newname);
+//0 /-1
+```
+
+可能出现的一些特殊情况：
+
+- oldname是文件或者符号链接，newname已经存在
+  - newname存在，且不在一个目录，先将该目录项删除然后将oldname重命名为newname。对于涉及的目录需要有写权限。因为对这个目录进行修改
+  - newname存在，它不能是引用一个目录，（不能是一个目录。）
+- oldname 是一个目录
+  - newname存在，必须引用一个目录（是一个目录，且是空目录）,先将其删除，然后将oldname重命名为newname
+- oldname或newname引用符号链接，处理的是链接的本身，不是指向的文件。
+- 不能对. 和.. 重命名
+- oldname和newname是同一个文件，函数不做更改直接返回。
+
+## 符号链接(软连接)symlink/symlinkat
+
+### 区别
+
+符号链接为了解决硬链接的一些限制
+
+- 硬链接直接指向文件`i结点`
+
+- 只有超级用户才能创建指向目录的硬链接（防止环）
+
+符号链接以及指向的对象没有文件系统的限制。
+
+使用函数时要注意这些函数是否处理符号链接。
+
+### 原型
+
+```c
+//unistd.h
+int symlink(const char*actualpath, const char *sympath);
+int symlinkat(const char *actualpath, int fd , const char *sympath);
+//0/1
+```
+
+要求actualpath已经存在。
+
+由于open会打开链接指向的文件，所以设计了打开链接本身的方法，并读取链接中的名字。
+
+```c
+//unistd.h
+ssize_t readlink(const char *restrict pathname, char *restrict buf, size_t bufsize);
+ssize_t readlinkat(int fd, const char* restrict pathname, char *restrict buf, size_t bufsize);
+
+//成功返回读取字节数，出错返回-1
+```
+
+
+
+## 文件的时间
+
+每个文件维护3哥时间字段
+
+| 字段    | 说明                    | 例子        | ls选项 |
+| ------- | ----------------------- | ----------- | ------ |
+| st_atim | 最后访问时间            | read        | -u     |
+| st_mtim | 最后修改时间            | write       | 默认   |
+| st_ctim | i结点状态的最后修改时间 | chmod/chown | -c     |
+
+![1567507469834](/home/spade/Documents/markdown/linux_programing_pics/1567507469834.png)
+
+
+
+### 修改的函数futimens/utimensat/utimes
+
+
+
+```c
+//sys/stat.h
+int futimens(int fd, const struct timespec times[2]);
+int utimensat(int fd, const char *path, const struct timespec times[2], int flag);
+//0、/1
+```
+
+修改文件的访问时间。futimens和utimensat可以制定纳秒级别的时间戳。
+
+- times 如果是空指针，访问时间和修改时间都设置为当前时间
+- times指向两个timespec结构数组，
+  - 任意一个数组元素的tv_nsec字段的值是UTIME_NOW，相应的时间戳就设置为当前时间，忽略tv_sec字段。
+  - 任意一个数组元素的tv_nsec字段值是UTIME_OMIT，相应的时间戳保持不限，忽略tv_sec字段-
+  - tv_nsec字段不是上边两个，相应时间戳设置为tv_sec和tv_nsec
+
+![1567509266741](/home/spade/Documents/markdown/linux_programing_pics/1567509266741.png)
+
+## mkdir、mkdirat、rmdir
+
+```c
+//sys/stat.h
+int mkdir(const char *pathname, mode_t mode);
+int mkdirat(int fd, const char *pathname , mode_t mode);
+//0.-1
+
+int rmdir(const char *pathname) //可以删除空目录
+```
+
+## 读目录
+
+有访问权限的都可以读目录，但是为了防止文件系统混乱，只有内核才能写目录。
